plugins {
    id 'java'
    id 'org.springframework.boot' version '3.0.12'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'java-test-fixtures'
}

bootJar.enabled = false

repositories {
    mavenCentral()
}

subprojects {
    group = 'com'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'

        implementation 'org.springframework.boot:spring-boot-starter-aop'

        implementation 'io.github.vaneproject:badwordfiltering:1.0.0'

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testImplementation 'com.h2database:h2'

        // JUnit 5 의존성
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'

        testImplementation "org.testcontainers:testcontainers:1.19.0"
        testImplementation "org.testcontainers:junit-jupiter:1.19.0"

        testImplementation 'org.mockito:mockito-core:5.0.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.0.0'
        testImplementation 'org.assertj:assertj-core:3.23.1'
    }
} 